--- a/minggu3/A11202214333/multimedia.html
+++ b/minggu3/A11202214333/multimedia.html
@@ -13,7 +13,7 @@
         <button onclick="pausevid()" type="button">pause video</button>
         <button onclick="durationvid()" type="button">duration video</button>
     </p>
-    <video width="900" id="myvideo">
+    <video controls="true" width="700" muted id="myvideo">
             <source src="./mov_bbb.mp4" type="video/mp4" >
     </video>
 </body>
